@@ -59,6 +59,22 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.5.v20120716</version>
+				<configuration>
+					<jvmArgs>-Xmx2048m -Xms1536m -XX:PermSize=128m -XX:MaxPermSize=256m</jvmArgs>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webApp> <contextPath>/bookreviews</contextPath> </webApp>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>8111</port>
+						</connector>
+					</connectors>
+					<stopPort>18080</stopPort>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
